# GB

./: .gitignore  CMakeFuncs.cmake  CMakeLists.txt  default.hpp
tests/: CMakeFuncs.cmake  CMakeLists.txt  test-main.cpp  test-unit-increment.cpp  test-unit-templates-1.cpp  test-unit-templates-3.cpp  test-unit-templates-4.cpp  test-unit-templates-5.cpp  unit-test-templates-2.cpp
tests/suit-tests/: test-suit-increment.cpp
tests/unit-tests/vebinar-5_templates/: test-unit-templates-1.cpp  test-unit-templates-2.cpp  test-unit-templates-3.cpp  test-unit-templates-4.cpp  test-unit-templates-5.cpp
tests/unit-tests/vebinar-7_exceptions/: test-unit-exception_2.cpp  test-unit-exception_3.cpp  test-unit-exception_4.cpp  test-unit-exceptions-1.cpp
tests/unit-tests/vebinar_6-streams/: test-unit-streams-1.cpp
